# SSDLite

./: .gitignore  LICENSE  README.md  comparision_summary.md  construct_validity_comparison.md  demo_new_api.py  flow_diagram.md  pyproject.toml  results_glove.md  results_nkjp.md
.github/: constraints-py39.txt
.github/workflows/: tests.yml
ssdlite/: __init__.py  corpus.py  embeddings.py  lang_config.py  results.py  ssd.py
ssdlite/backends/: _sweep_math.py  pca_sweep.py  pls.py
ssdlite/utils/: group.py  lexicon.py  math.py  neighbors.py  snippets.py  text.py  vectors.py
tests/: conftest.py  test_corpus.py  test_embeddings.py  test_embeddings_io.py  test_group.py  test_imports.py  test_lexicon.py  test_math.py  test_neighbors.py  test_pls.py  test_regression_glove.py  test_results.py  test_snippets.py  test_spacy_models.py  test_ssd.py  test_sweep_math.py  test_text.py  test_vectors.py
