[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ssdlite"
version = "1.0.0"
description = "Supervised Semantic Differential (SSD): interpretable, embedding-based analysis of concept meaning in text."
readme = "README.md"
requires-python = ">=3.9,<3.14"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  {name = "Hubert Plisiecki", email = "hplisiecki@gmail.com"},
  {name = "Paweł Lenartowicz", email = "pawellenartowicz@europe.com"}
]
keywords = ["NLP", "semantics", "word embeddings", "psychometrics", "semantic differential", "computational social science"]

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
  "numpy>=1.26.4",
  "spacy>=3.7.2",
]

[project.optional-dependencies]
gensim = [
  "gensim>=4.0",
]
pca_sweep = [
  "scikit-learn>=1.3.2",
]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "pytest-timeout>=2.0",
  "ruff>=0.5",
  "build>=1.0.0",
  "twine>=4.0",
  "scikit-learn>=1.3.2",
]

[project.urls]
Homepage = "https://github.com/hplisiecki/Supervised-Semantic-Differential"
Repository = "https://github.com/hplisiecki/Supervised-Semantic-Differential"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "local: marks tests that need local files not in repo",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ssdlite*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
ssdlite = ["py.typed"]
"ssdlite.utils" = ["*.txt"]
